# procurement-evaluation-ai

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  LOOM_SCRIPT.md  Makefile  README.md  alembic.ini  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  known-issues.md
docs/adr/: 0001-provider-agnostic-llm-factory.md  0002-bounded-concurrency-orchestration.md  0003-langsmith-env-propagation.md  0004-multi-model-cascade-proposed.md  0005-gold-standard-verification-deferred.md  0006-hybrid-pdf-extraction.md  0007-per-document-evaluation.md  ADR-0008-known-issues-v0.1.0.md
scripts/: check_no_secrets.py  check_ocr.py  generate_synthetic_vendors.py  render_matrix_preview.py  render_pdf_preview.py  run_eval_test.py
src/proceval/: __init__.py  config.py  llm_factory.py
src/proceval/agents/: __init__.py  criteria_agent.py  evaluation_agent.py  metadata_agent.py  verdict.py
src/proceval/api/: deps.py  main.py  schemas.py  services.py  state.py
src/proceval/audit/: __init__.py  logger.py
src/ui/: api_client.py  state.py  streamlit_app.py  styles.py
tests/: conftest.py  test_api.py  test_config.py  test_criteria_agent.py  test_criteria_regression.py  test_db_models.py  test_document_index.py  test_e2e_runner.py  test_evaluation_agent.py  test_metadata_agent.py  test_ocr_extraction.py  test_pdf_generation.py  test_pdf_parser.py  test_schemas.py  test_smoke_agents.py  test_smoke_evaluation.py  test_synthetic_fixtures.py  test_ui_imports.py  test_unzipper.py  test_verdict.py
tests/fixtures/: expected_criteria.json
(+38 files in other folders)
