[project]
name = "proceval"
version = "0.1.0"
description = "Procurement Evaluation AI — multi-agent LLM system for PSU tender evaluation"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nithin Kokkisa" }]
dependencies = [
    # LLM / agents
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.1.0",
    # Validation & config
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Web framework / UI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "streamlit>=1.38",
    "httpx>=0.27",
    # DB
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # PDF
    "pdfplumber>=0.11",
    "pypdf>=5.0",
    "reportlab>=4.2",
    # Test data
    "faker>=28.0",
    # Display
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
